--- a/chat_backend/requirements.txt
+++ b/chat_backend/requirements.txt
@@ -1,185 +1,36 @@
-anyio==4.6.2.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 asgiref==3.8.1
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
+attrs==25.1.0
 autobahn==24.4.2
 Automat==24.8.1
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-build==1.2.1
-CacheControl==0.14.0
-certifi==2024.7.4
 cffi==1.17.1
 channels==4.2.0
-channels_redis==4.2.1
-chardet==5.2.0
-charset-normalizer==3.3.2
-cleo==2.1.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
 constantly==23.10.4
-contourpy==1.2.1
-crashtest==0.4.1
 cryptography==44.0.0
-cycler==0.12.1
 daphne==4.1.2
-debugpy==1.8.9
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.8
 Django==5.1.5
-django-admin-interface==0.29.4
-django-channels==0.7.0
-django-colorfield==0.11.0
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
-djangorestframework-jwt==1.11.0
-dulwich==0.21.7
-executing==2.0.1
-fastjsonschema==2.20.0
-ffmpeg==1.4
-filelock==3.15.4
-fonttools==4.53.1
-fqdn==1.5.1
-fsspec==2024.9.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.27.2
-huggingface-hub==0.25.1
+frozenlist==1.5.0
 hyperlink==21.0.0
-idna==3.8
+idna==3.10
 incremental==24.7.2
-installer==0.7.0
-ipykernel==6.29.5
-ipython==8.26.0
-isoduration==20.11.0
-jaraco.classes==3.4.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.10.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.6
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keyring==24.3.1
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mistune==3.0.2
-more-itertools==10.4.0
-mpmath==1.3.0
-msgpack==1.0.8
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-nltk==3.9.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.1.1
-oauthlib==3.2.2
-overrides==7.7.0
-packaging==24.1
-panda==0.3.1
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-pinecone==5.3.1
-pinecone-client==5.0.1
-pinecone-plugin-inference==1.1.0
-pinecone-plugin-interface==0.0.7
-pkginfo==1.11.1
-platformdirs==4.2.2
-poetry==1.8.3
-poetry-core==1.9.0
-poetry-plugin-export==1.8.0
-prometheus_client==0.21.0
-prompt_toolkit==3.0.47
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
+multidict==6.1.0
+propcache==0.2.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-PyAudio==0.2.14
 pycparser==2.22
-Pygments==2.18.0
-PyJWT==1.7.1
 pyOpenSSL==25.0.0
-pyparsing==3.1.2
-pyproject_hooks==1.1.0
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-slugify==8.0.4
-pywin32==308
-pywin32-ctypes==0.2.3
-pywinpty==2.0.14
-PyYAML==6.0.2
-pyzmq==26.2.0
-rapidfuzz==3.9.6
-redis==5.2.1
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.21.0
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-Send2Trash==1.8.3
-sentence-transformers==3.1.1
+python-dotenv==1.0.1
 service-identity==24.2.0
-setuptools==75.1.0
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-sounddevice==0.5.1
-soupsieve==2.6
+setuptools==75.8.0
 sqlparse==0.5.3
-stack-data==0.6.3
-sympy==1.13.3
-terminado==0.18.1
-text-unidecode==1.3
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.20.0
-tomlkit==0.13.2
-torch==2.4.1
-tornado==6.4.2
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.45.1
-trove-classifiers==2024.7.2
 Twisted==24.11.0
 txaio==23.1.1
-types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.2.2
-virtualenv==20.26.3
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
+tzdata==2025.1
+websockets==14.2
+yarl==1.18.3
 zope.interface==7.2
